--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -192,6 +192,10 @@ ul {
     color: rgba(19, 15, 33, 0.4);
     border-left: 1px solid rgba(0, 0, 0, 0.1);
 
+    @media only screen and (max-width: 1007px) {
+      display: none;
+    }
+
     ol {
       list-style-type: none;
 
